# appbox

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  build.bat  config.hpp
appbox/: CMakeLists.txt
appbox/hooks/: CreateFileA.cpp  LoadLibraryA.cpp  __init__.cpp  __init__.hpp
common/: BuildCommandLine.cpp  BuildCommandLine.hpp  CMakeLists.txt  CRC32.cpp  CRC32.hpp  Defines.hpp  GetExecutablePath.cpp  GetExecutablePath.hpp  InjectData.cpp  InjectData.hpp  PipeClient.cpp  PipeClient.hpp  PipeServer.cpp  PipeServer.hpp  PipeSession.cpp  PipeSession.hpp  Random.cpp  Random.hpp  RemoteClient.cpp  RemoteClient.hpp  RemoteServer.cpp  RemoteServer.hpp  RemoteSession.cpp  RemoteSession.hpp  SetLogLevel.cpp  SetLogLevel.hpp  WString.cpp  WString.hpp  WinAPI.hpp
common/msg/: Log.hpp
gui/: CMakeLists.txt  main.cpp
loader/: App.cpp  App.hpp  CMakeLists.txt  Config.hpp  Loader.cpp  Loader.hpp  main.cpp  resource.rc
loader/Loader/: LogPanel.cpp  MainFrame.cpp  MainFrame.hpp
loader/filesystem/: RegCompile.cpp  RegCompile.hpp
loader/registry/: Hive.hpp  Node.hpp  Tree.hpp
loader/rpc/: Log.cpp  __init__.cpp  __init__.hpp
loader/supervise/: Path.cpp  Path.hpp  PayloadDecompressor.cpp  PayloadDecompressor.hpp  VariableDecoder.cpp  VariableDecoder.hpp  __init__.cpp  __init__.hpp
loader/utils/: CommandLineOptions.cpp  CommandLineOptions.hpp  ConvertDosPathToNtPath.cpp  ConvertDosPathToNtPath.hpp  Defer.hpp  GetExecutableDir.cpp  GetExecutableDir.hpp  KnownFolder.cpp  KnownFolder.hpp  MapBaseFS.cpp  MapBaseFS.hpp  MiniLauncher.cpp  MiniLauncher.hpp  ProcessJob.cpp  ProcessJob.hpp  Registry.cpp  Registry.hpp  RegistryBuilder.hpp  WinCall.cpp  WinCall.hpp
loader/widget/: MainFrame.cpp  MainFrame.hpp
loader/widgets/: LogPanel.cpp  LogPanel.hpp  MainFrame.cpp  MainFrame.hpp
packer/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
packer/widgets/: Common.hpp  FileDataView.cpp  FileDataView.hpp  FilePanel.cpp  FilePanel.hpp  LogPanel.cpp  LogPanel.hpp  MainFrame.cpp  MainFrame.hpp  ProcessDialog.cpp  ProcessDialog.hpp  RegistryPanel.cpp  RegistryPanel.hpp  SettingsPanel.cpp  SettingsPanel.hpp  StartupFilesDialog.cpp  StartupFilesDialog.hpp
sandbox/: CMakeLists.txt  Config.hpp  Sandbox.cpp  Sandbox.def  Sandbox.hpp  appbox.cpp  appbox.def  appbox.hpp
sandbox/filesystem/: CreateDirectory.cpp  CreateDirectory.hpp  DirName.cpp  DirName.hpp  RebasePath.cpp  RebasePath.hpp  RemoveAll.cpp  RemoveAll.hpp  Resolve.cpp  Resolve.hpp  Sequence.cpp  Sequence.hpp  __init__.cpp  __init__.hpp
sandbox/hook/: CreateProcessInternalW.cpp  CreateProcessInternalW.hpp  LdrQueryImageFileExecutionOptionsEx.cpp  LdrQueryImageFileExecutionOptionsEx.hpp  NtClose.cpp  NtClose.hpp  NtCompactKeys.cpp  NtCompactKeys.hpp  NtCompressKey.cpp  NtCompressKey.hpp  NtCreateFile.cpp  NtCreateFile.hpp  NtCreateKey.cpp  NtCreateKey.hpp  NtCreateKeyTransacted.cpp  NtCreateKeyTransacted.hpp  NtCurrentTeb.cpp  NtCurrentTeb.hpp  NtDeleteFile.cpp  NtDeleteFile.hpp  NtDeleteKey.cpp  NtDeleteKey.hpp  NtDeleteValueKey.cpp  NtDeleteValueKey.hpp  NtDeviceIoControlFile.cpp  NtDeviceIoControlFile.hpp  NtEnumerateKey.cpp  NtEnumerateKey.hpp  NtEnumerateValueKey.cpp  NtEnumerateValueKey.hpp  NtFlushKey.cpp  NtFlushKey.hpp  NtFsControlFile.cpp  NtFsControlFile.hpp  NtLoadKey.cpp  NtLoadKey.hpp  NtLoadKey2.cpp  NtLoadKey2.hpp  NtLoadKey3.cpp  NtLoadKey3.hpp  (+80 more)
sandbox/hooks/: CreateFileA.cpp  CreateFileW.cpp  CreateProcessInternalW.cpp  LoadLibraryA.cpp  LoadLibraryW.cpp  NtCreateFile.cpp  NtQueryObject.cpp  __init__.cpp  __init__.hpp
sandbox/msg/: Log.hpp
sandbox/utils/: AsyncInstance.hpp  BitParser.cpp  BitParser.hpp  CheckFileExist.cpp  CheckFileExist.hpp  CheckPathExist.cpp  CheckPathExist.hpp  ConvertToFullNtPath.cpp  ConvertToFullNtPath.hpp  CopyFileNt.cpp  CopyFileNt.hpp  Defines.hpp  FileFullDirInformationWalker.cpp  FileFullDirInformationWalker.hpp  GetPEB.cpp  GetPEB.hpp  HandleInfo.cpp  HandleInfo.hpp  Log.cpp  Log.hpp  MappingAsDosNtPath.cpp  MappingAsDosNtPath.hpp  MappingAsSandboxNtPath.cpp  MappingAsSandboxNtPath.hpp  Path.cpp  Path.hpp  PipeClient.cpp  PipeClient.hpp  QueryHandlePath.cpp  QueryHandlePath.hpp  RemoteLog.cpp  RemoteLog.hpp  RemoteProtocol.hpp  Task.cpp  Task.hpp  WinAPI.h  WinAPI.hpp
test/: 0.reg  CMakeLists.txt  README.md  Test.cpp  Test.hpp  honeypot.pack.json  main.cpp
test/builder/: FsBuilder.hpp  FsDir.cpp  FsDir.hpp  FsFile.cpp  FsFile.hpp  FsNode.cpp  FsNode.hpp  FsRoot.cpp
test/cases/: ArugmentsPassthrough.cpp  CreateFileW.cpp  Fs_DeleteFile_MultiLower_ExistsInLower.cpp  Fs_DeleteFile_MultiLower_ExistsInLowerUpper.cpp  Fs_DeleteFile_MultiLower_ExistsInUpper.cpp  Fs_DeleteFile_MultiLower_NonExists.cpp  Fs_DeleteFile_WhiteoutInLower_ExistsInUpper.cpp  Fs_ListDir_MultiLower_ExistsInLower.cpp  Fs_ListDir_MultiLower_ExistsInLower_WhiteoutInUpper.cpp  Fs_NewFile_MultiLower_WhiteoutInLower.cpp  Fs_NewFile_MultiLower_WhiteoutInUpper.cpp  Fs_ReadFile_MultiLower_WhiteoutInUpper.cpp  OpenFile.cpp  ReadFile.cpp  Reg_ReadKey_MultiLower_ExistsInLower.cpp  Reg_ReadKey_SingleLower_ExistsInLower.cpp  Reg_ReadValue.cpp  RemoteServer.cpp  __init__.cpp  __init__.hpp
test/honeypot/: CreateProcessA.cpp  __init__.cpp  __init__.hpp
test/probe/: CreateDirectoryW.cpp  CreateDirectoryW.hpp  CreateFileW.cpp  CreateFileW.hpp  DeleteFileW.cpp  DeleteFileW.hpp  HelloWorld.cpp  HelloWorld.hpp  ListDir.cpp  ListDir.hpp  ReadFileFull.cpp  ReadFileFull.hpp  RegistryReadKey.cpp  RegistryReadKey.hpp  Server.cpp  Server.hpp  __init__.cpp  __init__.hpp
test/utils/: CWD.cpp  CWD.hpp  CommonFixture.cpp  CommonFixture.hpp  Config.cpp  Config.hpp  FsBuilder.cpp  FsBuilder.hpp  KnownFolder.cpp  KnownFolder.hpp  ProbeCall.cpp  ProbeCall.hpp  ReadFileFull.cpp  ReadFileFull.hpp  Semaphore.cpp  Semaphore.hpp  WinHandle.hpp  WriteFileFull.cpp  WriteFileFull.hpp
utils/: CMakeLists.txt  FolderConv.hpp  Instance.hpp  appbox.json  crc32.cpp  crc32.hpp  file.hpp  inject.hpp  layout.hpp  macros.hpp  meta.hpp  pair.hpp  winapi.cpp  winapi.hpp  wstring.cpp  wstring.hpp  zstream.cpp  zstream.hpp
(+18 files in other folders)
